--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@
                             <div>
                                 <h2 class="text-white mb-4">
                                     <!--                                        <span class="display-4 font-weight-light">Более 90% учеников</span>-->
-                                    <span class="d-block">Более 90% учеников, использующих  <strong class="font-weight-light">WebCart</strong></span>
+                                    <span class="d-block">Более 1 млн пользователей, использующих  <strong class="font-weight-light">WeCanDo</strong></span>
                                 </h2>
-                                <p class="lead text-white">говорят, что получили более высокие отметки. </p>
+                                <p class="lead text-white">говорят, что стали зарабатывать больше. </p>
                                 <div class="mt-5">
                                     <a href="#sct-page-examples" class="btn btn-white rounded-pill hover-translate-y-n3 btn-icon mr-sm-4 scroll-me">
                                         <span class="btn-inner--text">Создать задание</span>
@@ -392,8 +392,7 @@
                                         </div>
                                         <h5 class="font-weight-bold">Юридическая помощь</h5>
 
-                                        <a href="#" class="d-inline-block link link-underline-danger text-danger mt-4">Find out
-                                            more</a>
+                                        <a href="#" class="d-inline-block link link-underline-danger text-danger mt-4">Перейти</a>
                                     </div>
                                 </div>
                             </div>
@@ -430,8 +429,14 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
 
+                    </div>
+                    <div class="text-center mt-2">
+                        <a href="#" class="btn btn-white btn-icon rounded-pill shadow hover-translate-y-n3">
+                            <span class="btn-inner--text">Посмотреть все категории</span>
+                            <span class="btn-inner--icon"><i class="far fa-angle-right"></i></span>
+                        </a>
+                    </div>
                 </div>
             </section>
         </div>
@@ -449,63 +454,8 @@
 
 
 
-
         <!-- Features (v3) -->
-        <section class="slice slice-lg">
-            <div class="mb-5 text-center">
-                <h3 class=" mt-4">Учитесь быстро!</h3>
-                <div class="fluid-paragraph mt-3">
-                    <p class="lead lh-180">Нажимай на карточку и узнаешь перевод слова!</p>
-                </div>
-            </div>
-            <div class="container swiper-js-container">
-                <div class="swiper-container swiper-container-coverflow swiper-container-3d swiper-container-horizontal" data-swiper-effect="coverflow" data-swiper-centered-slides="true" data-swiper-initial-slide="2" data-swiper-items="1" data-swiper-space-between="0"
-                    data-swiper-sm-items="4" data-swiper-sm-space-between="0" style="cursor: grab;">
-                    <div class="swiper-wrapper" style="transition-duration: 0ms; transform: translate3d(-971.25px, 0px, 0px); perspective-origin: 1526.25px 50%;">
-                        <div class="swiper-slide" style="width: 277.5px; transition-duration: 0ms; transform: translate3d(0px, 0px, -750px) rotateX(0deg) rotateY(150deg); z-index: -14;">
-                            <a href="../../assets/img/theme/light/mobile-7.jpg" data-fancybox="apps">
-                                <img alt="Image placeholder" src="assets/img/theme/light/mem_cat.jpg" class="img-fluid rounded">
-                            </a>
-                        </div>
-                        <div class="swiper-slide" style="width: 277.5px; transition-duration: 0ms; transform: translate3d(0px, 0px, -599.73px) rotateX(0deg) rotateY(119.946deg); z-index: -11;">
-                            <a href="../../assets/img/theme/light/mobile-1.jpg" data-fancybox="apps">
-                                <img alt="Image placeholder" src="assets/img/theme/light/gus.jpg" class="img-fluid rounded">
-                            </a>
-                        </div>
-                        <div class="swiper-slide" style="width: 277.5px; transition-duration: 0ms; transform: translate3d(0px, 0px, -450px) rotateX(0deg) rotateY(90deg); z-index: -8;">
-                            <a href="../../assets/img/theme/light/mobile-2.jpg" data-fancybox="apps">
-                                <img alt="Image placeholder" src="assets/img/theme/light/dog.jpg" class="img-fluid rounded">
-                            </a>
-                        </div>
-                        <div class="swiper-slide" style="width: 277.5px; transition-duration: 0ms; transform: translate3d(0px, 0px, -299.73px) rotateX(0deg) rotateY(59.9459deg); z-index: -5;">
-                            <a href="../../assets/img/theme/light/mobile-3.jpg" data-fancybox="apps">
-                                <img alt="Image placeholder" src="assets/img/theme/light/sam.jpg" class="img-fluid rounded">
-                            </a>
-                        </div>
-                        <div class="swiper-slide swiper-slide-prev" style="width: 277.5px; transition-duration: 0ms; transform: translate3d(0px, 0px, -150px) rotateX(0deg) rotateY(30deg); z-index: -2;">
-                            <a href="../../assets/img/theme/light/mobile-4.jpg" data-fancybox="apps">
-                                <img alt="Image placeholder" src="assets/img/theme/light/car.jpg" class="img-fluid rounded">
-                            </a>
-                        </div>
-                        <div class="swiper-slide swiper-slide-active" style="width: 277.5px; transition-duration: 0ms; transform: translate3d(0px, 0px, -0.27027px) rotateX(0deg) rotateY(-0.0540541deg); z-index: 1;">
-                            <a href="../../assets/img/theme/light/mobile-5.jpg" data-fancybox="apps">
-                                <img alt="Image placeholder" src="assets/img/theme/light/man.jpg" class="img-fluid rounded">
-                            </a>
-                        </div>
-                        <div class="swiper-slide swiper-slide-next" style="width: 277.5px; transition-duration: 0ms; transform: translate3d(0px, 0px, -150px) rotateX(0deg) rotateY(-30deg); z-index: -2;">
-                            <a href="../../assets/img/theme/light/mobile-7.jpg" data-fancybox="apps">
-                                <img alt="Image placeholder" src="assets/img/theme/light/elka.jpg" class="img-fluid rounded">
-                            </a>
-                        </div>
-                        <div class="swiper-slide" style="width: 277.5px; transition-duration: 0ms; transform: translate3d(0px, 0px, -300.27px) rotateX(0deg) rotateY(-60.0541deg); z-index: -5;">
-                            <a href="../../assets/img/theme/light/mobile-1.jpg" data-fancybox="apps">
-                                <img alt="Image placeholder" src="assets/img/theme/light/plan.jpg" class="img-fluid rounded">
-                            </a>
-                        </div>
-                    </div>
-                    <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div>
-            </div>
-        </section>
+
         <!-- Features (v4) -->
 
         <!-- Features (v5) -->
@@ -516,22 +466,23 @@
             <div class="container text-center">
                 <div class="row">
                     <div class="col-12">
-                        <h1 class="text-white"> Учеба в удовольствие</h1>
+                        <h1 class="text-white"> Основные преимущества WeCanDo</h1>
                         <div class="row justify-content-center mt-4">
                             <div class="col-lg-8">
                                 <p class="lead text-white">
-                                    WebCart начинался как очень простое онлайн-средство для обучения, а сегодня он предлагает ученикам ресурсы для создания карточек, занятия правописанием, тестирования своих знаний, совместной работы с другими учениками и многое другое.
+                                    Выгодные цены У частных исполнителей нет расходов на офис, рекламу, зарплату секретарю и других затрат, которые сервисные компании обычно включают в стоимость своих услуг.
+
+
                                 </p>
+
                                 <div class="btn-container mt-5">
                                     <a href="https://themes.getbootstrap.com/product/purpose-website-ui-kit/" class="btn btn-dark rounded-pill btn-icon hover-translate-y-n3 mb-4 mb-md-0">
 
-                                        <span class="btn-inner--text">Начать</span>
+                                        <span class="btn-inner--text">Создать задание</span>
                                     </a>
                                     <a href="docs/index.html" class="btn btn-white rounded-pill btn-icon hover-translate-y-n3">
-                                        <span class="btn-inner--icon">
-                                                <i class="far fa-book"></i>
-                                            </span>
-                                        <span class="btn-inner--text">Создать модуль</span>
+
+                                        <span class="btn-inner--text">Зарегистрироваться</span>
                                     </a>
                                 </div>
                             </div>
@@ -756,7 +707,7 @@
             <section class="slice slice-lg">
                 <div class="container">
                     <div class="mb-5 text-center">
-                        <h3 class=" mt-4">1503 учебных модуля и это число постоянно растет</h3>
+                        <h3 class=" mt-4">Новые публикации в блоге</h3>
                         <div class="fluid-paragraph mt-3">
                             <p class="lead lh-180">Перейди в уже созданный модуль или создай свой собственный</p>
                         </div>
@@ -775,7 +726,7 @@
                                             <a href="#" class="text-white"> Спорт:</a>
                                         </h3>
                                         <h6 class="text-white">
-                                            <a href="#" class="text-white border-bottom border-white">Виды спорта</a>
+                                            <a href="#" class="text-white border-bottom border-white">Тренер</a>
                                         </h6>
                                     </div>
                                     <div class="w-100 mt-auto text-right">
@@ -794,7 +745,7 @@
                                 <div class="card-img-overlay d-flex flex-column">
                                     <div class="col pt-2">
                                         <h3 class="text-capitalize mb-1">
-                                            <a href="#" class="text-white">Архитектура в картинках</a>
+                                            <a href="#" class="text-white">Экскурсовод</a>
                                         </h3>
                                         <h6 class="text-white">
                                             <a href="#" class="text-white border-bottom border-white">Италия</a>
@@ -818,7 +769,7 @@
                                 <div class="card-img-overlay d-flex flex-column">
                                     <div class="col pt-2">
                                         <h3 class="text-capitalize mb-1">
-                                            <a href="#" class="text-white">Геграфия</a>
+                                            <a href="#" class="text-white">Репетитор географии</a>
                                         </h3>
                                         <h6 class="text-white">
                                             <a href="#" class="text-white border-bottom border-white">Страны мира</a>
@@ -855,7 +806,7 @@
                     </div>
                     <div class="text-center mt-5">
                         <a href="#" class="btn btn-white btn-icon rounded-pill shadow hover-translate-y-n3">
-                            <span class="btn-inner--text">Посмотреть все модули</span>
+                            <span class="btn-inner--text">Посмотреть все новости</span>
                             <span class="btn-inner--icon"><i class="far fa-angle-right"></i></span>
                         </a>
                     </div>
@@ -876,9 +827,8 @@
                                         <i class="fas fa-file-alt text-white"></i>
                                     </div>
                                     <div class="icon-text">
-                                        <h3 class="text-white h4">Более 2000 учеников по всему миру</h3>
-                                        <p class="text-white mb-0">Более 90% учеников, говорят, что их успеваемость улучшилась. Узнайте, как простые средства от WebCart помогают изучать любые предметы – от введения в алгебру до мировой истории и университетских курсов по экономике
-                                            – и многое-многое другое.</p>
+                                        <h3 class="text-white h4">Более 2000000 пользователей по всему миру</h3>
+
                                     </div>
                                 </div>
                             </div>
@@ -892,9 +842,8 @@
                                         <i class="fas fa-question-circle"></i>
                                     </div>
                                     <div class="icon-text">
-                                        <h5 class="h4 text-white">Наша цель – помогать ученикам запоминать нужный им учебный материал.</h5>
-                                        <p class="mb-0 text-white">Мы достигаем этого, облегчая создание и публикацию учебных материалов для учеников и учителей. Cегодня он предлагает ученикам ресурсы для создания карточек, занятия правописанием, тестирования своих знаний, совместной
-                                            работы с другими учениками и многое другое.</p>
+                                        <h5 class="h4 text-white">Наша цель – помогать людям находить работу,а работодателю исполнителя.</h5>
+
                                     </div>
                                 </div>
                             </div>
@@ -944,28 +893,28 @@
                 <div class="row align-items-center justify-content-md-between py-4 mt-4 delimiter-top">
                     <div class="col-md-6">
                         <div class="copyright text-sm font-weight-bold text-center text-md-left">
-                            &copy; 2019-2020 <a href="https://webpixels.io" class="font-weight-bold" target="_blank">WebCart</a>. Все права защищены
+                            &copy; 2019-2020 <a href="#" class="font-weight-bold" target="_blank">WeCanDo</a>. Все права защищены
                         </div>
                     </div>
                     <div class="col-md-6">
                         <ul class="nav justify-content-center justify-content-md-end mt-3 mt-md-0">
                             <li class="nav-item">
-                                <a class="nav-link" href="https://dribbble.com/webpixels" target="_blank">
+                                <a class="nav-link" href="#" target="_blank">
                                     <i class="fab fa-dribbble"></i>
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="https://www.instagram.com/webpixelsofficial" target="_blank">
+                                <a class="nav-link" href="#" target="_blank">
                                     <i class="fab fa-instagram"></i>
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="https://github.com/webpixels" target="_blank">
+                                <a class="nav-link" href="#" target="_blank">
                                     <i class="fab fa-github"></i>
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="https://www.facebook.com/webpixels" target="_blank">
+                                <a class="nav-link" href="#" target="_blank">
                                     <i class="fab fa-facebook"></i>
                                 </a>
                             </li>
