--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
                         <li class="nav-item active">
                             <a class="nav-link" href="index.html">Помощь</a>
                         </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="pages/authentication/basic-login.html">Войти</a>
+                        </li>
 
                     </ul>
                 </div>
@@ -184,7 +187,7 @@
                                         <span class="btn-inner--text">Создать задание</span>
                                         <span class="btn-inner--icon"><i class="far fa-angle-right"></i></span>
                                     </a>
-                                    <a href="#sct-features" class="btn btn-outline-white rounded-pill hover-translate-y-n3 btn-icon d-none d-xl-inline-block scroll-me">
+                                    <a href="pages/authentication/basic-register.html" class="btn btn-outline-white rounded-pill hover-translate-y-n3 btn-icon d-none d-xl-inline-block scroll-me">
                                         <span class="btn-inner--icon"><i class="far fa-file-alt"></i></span>
                                         <span class="btn-inner--text">Зарегистрироваться</span>
                                     </a>
@@ -480,7 +483,7 @@
 
                                         <span class="btn-inner--text">Создать задание</span>
                                     </a>
-                                    <a href="docs/index.html" class="btn btn-white rounded-pill btn-icon hover-translate-y-n3">
+                                    <a href="pages/authentication/basic-register.html" class="btn btn-white rounded-pill btn-icon hover-translate-y-n3">
 
                                         <span class="btn-inner--text">Зарегистрироваться</span>
                                     </a>
@@ -884,7 +887,7 @@
                     <div class="col-lg-2 col-sm-4 mb-5 mb-lg-0">
                         <h6 class="heading mb-3">Справка</h6>
                         <ul class="list-unstyled">
-                            <li><a href="#">Зарегистрироваться</a></li>
+                            <li><a href="pages/authentication/basic-register.html">Зарегистрироваться</a></li>
                             <li><a href="#">Справочный центр</a></li>
                             <li><a href="#">Правила сообщества</a></li>
                         </ul>
