--- a/pages/authentication/basic-register.html
+++ b/pages/authentication/basic-register.html
@@ -35,6 +35,16 @@
                         <li class="nav-item ">
                             <a class="nav-link" href="../../index.html">Главная</a>
                         </li>
+                        <li class="nav-item ">
+                            <a class="nav-link" href="../../index.html">Создать задание</a>
+                        </li>
+                        <li class="nav-item ">
+                            <a class="nav-link" href="../../index.html">Все задания</a>
+                        </li>
+                        <li class="nav-item ">
+                            <a class="nav-link" href="../../index.html">Исполнители</a>
+                        </li>
+
                         <!-- Pages menu -->
 
                         <!-- Sections menu -->
@@ -43,14 +53,11 @@
                     <ul class="navbar-nav align-items-lg-center ml-lg-auto">
 
                         <li class="nav-item d-lg-none d-xl-block">
-                            <a class="nav-link" href="../../docs/changelog.html" target="_blank">Войти</a>
+                            <a class="nav-link" href="../../docs/changelog.html" target="_blank">Помощь</a>
                         </li>
                         <li class="nav-item mr-0">
                             <a href="#" target="_blank" class="nav-link d-lg-none">Войти</a>
-                            <a href="#" target="_blank" class="btn btn-sm btn-dark btn-icon rounded-pill d-none d-lg-inline-flex" data-toggle="tooltip" data-placement="left" title="Авторизация">
-                                <span class="btn-inner--icon"><i class="far fa-user"></i></span>
-                                <span class="btn-inner--text">Авторизоваться</span>
-                            </a>
+
                         </li>
                     </ul>
                 </div>
