add profil for viev

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-sm dropdown-menu-right">
                                     <h6 class="dropdown-header">Меню пользователя</h6>
-                                    <a class="dropdown-item" href="#">
+                                    <a class="dropdown-item" href="pages/account/account-profile-public.html">
                                         <i class="far fa-user"></i>Аккаунт
                                     </a>
                                     <a class="dropdown-item" href="#">
