--- a/pages/account/account-profile-public.html
+++ b/pages/account/account-profile-public.html
@@ -312,7 +312,7 @@
                                         </div>
                                     </div>
                                     <div class="col-auto flex-fill mt-4 mt-sm-0 text-sm-right d-none d-lg-block">
-                                        <a href="#" class="btn btn-sm btn-white rounded-pill btn-icon shadow">
+                                        <a href="account-profile.html" class="btn btn-sm btn-white rounded-pill btn-icon shadow">
                                             <span class="btn-inner--icon"><i class="far fa-fire"></i></span>
                                             <span class="btn-inner--text">Редактировать профиль</span>
                                         </a>
@@ -379,6 +379,7 @@
 
                     </div>
                 </div>
+
             </div>
         </section>
     </div>
