--- a/pages/account/account-profile.html
+++ b/pages/account/account-profile.html
@@ -181,30 +181,30 @@
                                 <ul class="list-inline row justify-content-lg-end mb-0">
                                     <li class="list-inline-item col-sm-4 col-md-auto px-3 my-2 mx-0">
                                         <span class="badge badge-dot text-white">
-                      <i class="bg-success"></i>Пройдено
-                    </span>
+                                    <i class="bg-success"></i>Выполнено
+                                  </span>
                                         <a class="d-sm-block h5 text-white font-weight-bold pl-2" href="#">
-                      20
-                      <small class="far fa-angle-up text-success"></small>
-                    </a>
+                                    20
+                                    <small class="far fa-angle-up text-success"></small>
+                                  </a>
                                     </li>
                                     <li class="list-inline-item col-sm-4 col-md-auto px-3 my-2 mx-0">
                                         <span class="badge badge-dot text-white">
-                      <i class="bg-warning"></i>Создано
-                    </span>
+                                    <i class="bg-warning"></i>В работе
+                                  </span>
                                         <a class="d-sm-block h5 text-white font-weight-bold pl-2" href="#">
-                      5
-                      <small class="far fa-angle-up text-warning"></small>
-                    </a>
+                                    5
+                                    <small class="far fa-angle-up text-warning"></small>
+                                  </a>
                                     </li>
                                     <li class="list-inline-item col-sm-4 col-md-auto px-3 my-2 mx-0">
                                         <span class="badge badge-dot text-white">
-                      <i class="bg-danger"></i>Просмотрено
-                    </span>
+                                    <i class="bg-danger"></i>Отменено
+                                  </span>
                                         <a class="d-sm-block h5 text-white font-weight-bold pl-2" href="#">
-                      11
-                      <small class="far fa-angle-down text-danger"></small>
-                    </a>
+                                    11
+                                    <small class="far fa-angle-down text-danger"></small>
+                                  </a>
                                     </li>
                                 </ul>
                             </div>
@@ -227,8 +227,8 @@
                                         <span class="dropdown-header">Аккаунт</span>
                                         <a class="dropdown-item" href="account-profile.html">Профиль</a>
                                         <a class="dropdown-item" href="account-settings.html">Настройки</a>
-                                        <a class="dropdown-item" href="account-billing.html">Модули</a>
-                                        <a class="dropdown-item" href="account-notifications.html">Карточки</a>
+                                        <!--<a class="dropdown-item" href="account-billing.html">Модули</a>
+                                       <a class="dropdown-item" href="account-notifications.html">Карточки</a>-->
                                     </div>
                                 </div>
                                 <div class="btn-group" role="group">
@@ -238,7 +238,7 @@
                   </button>
                                     <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow" aria-labelledby="btn-group-boards">
                                         <a class="dropdown-item" href="board-overview.html">Просмотр</a>
-                                        <a class="dropdown-item" href="board-projects.html">Модули</a>
+
                                         <a class="dropdown-item" href="board-tasks.html">Задачи</a>
                                         <a class="dropdown-item" href="board-connections.html">Карточки</a>
                                     </div>
@@ -264,36 +264,7 @@
                 <div class="row row-grid">
                     <div class="col-lg-9 order-lg-2">
                         <!-- Change avatar -->
-                        <div class="card bg-gradient-warning hover-shadow-lg">
-                            <div class="card-body py-3">
-                                <div class="row row-grid align-items-center">
-                                    <div class="col-lg-8">
-                                        <div class="media align-items-center">
-                                            <a href="#" class="avatar avatar-lg rounded-circle mr-3">
-                                                <img alt="Image placeholder" src="../../assets/img/theme/light/team-1-800x800.jpg">
-                                            </a>
-                                            <div class="media-body">
-                                                <h5 class="text-white mb-0">Иван Иванов</h5>
-                                                <div>
-                                                    <form>
-                                                        <input type="file" name="file-1[]" id="file-1" class="custom-input-file custom-input-file-link" data-multiple-caption="{count} files selected" multiple />
-                                                        <label for="file-1">
-                              <span class="text-white">Выбрать аватар</span>
-                            </label>
-                                                    </form>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-auto flex-fill mt-4 mt-sm-0 text-sm-right d-none d-lg-block">
-                                        <a href="#" class="btn btn-sm btn-white rounded-pill btn-icon shadow">
-                                            <span class="btn-inner--icon"><i class="far fa-fire"></i></span>
-                                            <span class="btn-inner--text">Создать карточки</span>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+
                         <!-- General information form -->
                         <div class="actions-toolbar py-2 mb-4">
                             <h5 class="mb-1">Информация о вас</h5>
@@ -387,24 +358,8 @@
                                             <i class="far fa-angle-right"></i>
                                         </div>
                                     </a>
-                                    <a href="account-billing.html" class="list-group-item list-group-item-action d-flex justify-content-between">
-                                        <div>
-                                            <i class="far fa-clone mr-2"></i>
-                                            <span>Модули</span>
-                                        </div>
-                                        <div>
-                                            <i class="far fa-angle-right"></i>
-                                        </div>
-                                    </a>
-                                    <a href="account-notifications.html" class="list-group-item list-group-item-action d-flex justify-content-between">
-                                        <div>
-                                            <i class="far fa-folder mr-2"></i>
-                                            <span>Папки</span>
-                                        </div>
-                                        <div>
-                                            <i class="far fa-angle-right"></i>
-                                        </div>
-                                    </a>
+
+
                                     <a href="account-notifications.html" class="list-group-item list-group-item-action d-flex justify-content-between">
                                         <div>
                                             <i class="far fa-envelope mr-2"></i>
