--- a/pages/authentication/basic-login.html
+++ b/pages/authentication/basic-login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Content">
     <meta name="author" content="Webpixels">
-    <title>Диплом авторизация</title>
+    <title>Сервис по нахождению исполнителей для оказания коммерческих услуг</title>
     <!-- Favicon -->
     <link rel="icon" href="../../assets/img/brand/favicon.png" type="image/png">
     <!-- Font Awesome 5 -->
