--- a/pages/cart/cart-maker.html
+++ b/pages/cart/cart-maker.html
@@ -124,40 +124,29 @@
                 </div>
             </form>
             <div class="omnisearch-suggestions">
-                <h6 class="heading">Поиск слов</h6>
+                <h6 class="heading">Поиск исполнителя</h6>
                 <div class="row">
                     <div class="col-sm-6">
                         <ul class="list-unstyled mb-0">
                             <li>
                                 <a class="list-link" href="#">
                                     <i class="far fa-search"></i>
-                                    <span>Яблоко</span> в фруктах
+                                    <span>Фотограф</span> в фото услугах
                                 </a>
                             </li>
                             <li>
                                 <a class="list-link" href="#">
                                     <i class="far fa-search"></i>
-                                    <span>Капуста</span> в овощах
+                                    <span>Авто слесарь</span> в ремонте транспорта
                                 </a>
                             </li>
                             <li>
                                 <a class="list-link" href="#">
                                     <i class="far fa-search"></i>
-                                    <span>Телевизор</span> в электронике
+                                    <span>Электрик</span> в бытовом ремонте
                                 </a>
                             </li>
-                            <li>
-                                <a class="list-link" href="#">
-                                    <i class="far fa-search"></i>
-                                    <span>Клен</span> в деревьях
-                                </a>
-                            </li>
-                            <li>
-                                <a class="list-link" href="#">
-                                    <i class="far fa-search"></i>
-                                    <span>Грецкий орех</span> в орехах
-                                </a>
-                            </li>
+
                         </ul>
                     </div>
                 </div>
