remake links of meta

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Purpose is a unique and beautiful collection of UI elements that are all flexible and modular. A complete and customizable solution to building the website of your dreams.">
-    <meta name="author" content="Webpixels">
+    <meta name="author" content="WeCanDo">
     <title>Сервис по нахождению исполнителей для оказания коммерческих услуг</title>
     <!-- Favicon -->
     <link rel="icon" href="assets/img/brand/favicon.png" type="image/png">
@@ -183,7 +183,7 @@
                                 </h2>
                                 <p class="lead text-white">говорят, что стали зарабатывать больше. </p>
                                 <div class="mt-5">
-                                    <a href="#sct-page-examples" class="btn btn-white rounded-pill hover-translate-y-n3 btn-icon mr-sm-4 scroll-me">
+                                    <a href="./pages/cart/cart-maker.html" class="btn btn-white rounded-pill hover-translate-y-n3 btn-icon mr-sm-4 scroll-me">
                                         <span class="btn-inner--text">Создать задание</span>
                                         <span class="btn-inner--icon"><i class="far fa-angle-right"></i></span>
                                     </a>
@@ -479,7 +479,7 @@
                                 </p>
 
                                 <div class="btn-container mt-5">
-                                    <a href="https://themes.getbootstrap.com/product/purpose-website-ui-kit/" class="btn btn-dark rounded-pill btn-icon hover-translate-y-n3 mb-4 mb-md-0">
+                                    <a href="./pages/cart/cart-maker.html" class="btn btn-dark rounded-pill btn-icon hover-translate-y-n3 mb-4 mb-md-0">
 
                                         <span class="btn-inner--text">Создать задание</span>
                                     </a>
