--- a/pages/authentication/basic-register.html
+++ b/pages/authentication/basic-register.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Content">
-    <meta name="author" content="Webpixels">
+    <meta name="author" content="WeCanDo">
     <title>Сервис по нахождению исполнителей для оказания коммерческих услуг</title>
     <!-- Favicon -->
     <link rel="icon" href="../../assets/img/brand/favicon.png" type="image/png">
