make link makers

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                             <a class="nav-link" href="index.html">Все задания</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="index.html">Исполнители</a>
+                            <a class="nav-link" href="pages/account/worker.html">Исполнители</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav align-items-lg-center ml-lg-auto">
