Workers make names images

--- a/pages/account/worker.html
+++ b/pages/account/worker.html
@@ -257,8 +257,8 @@
                                             </a>
                                             <span class="avatar-child avatar-badge bg-info"></span>
                                         </div>
-                                        <h5 class="mt-3 mb-0">Betty Mavis</h5>
-                                        <a href="#" class="d-block text-sm text-muted mb-3">@betty.mavis</a>
+                                        <h5 class="mt-3 mb-0">Артём Игнатьев</h5>
+                                        <a href="#" class="d-block text-sm text-muted mb-3">+79991700604</a>
                                         <div class="actions d-flex justify-content-between px-4">
                                             <a href="#" class="action-item">
                                                 <i class="far fa-user-edit"></i>
@@ -392,8 +392,8 @@
                                             </a>
                                             <span class="avatar-child avatar-badge bg-success"></span>
                                         </div>
-                                        <h5 class="mt-3 mb-0">Monroe Parker</h5>
-                                        <a href="#" class="d-block text-sm text-muted mb-3">@monroe.parker</a>
+                                        <h5 class="mt-3 mb-0">Екатерина Чернова</h5>
+                                        <a href="#" class="d-block text-sm text-muted mb-3">+79054654546</a>
                                         <div class="actions d-flex justify-content-between px-4">
                                             <a href="#" class="action-item">
                                                 <i class="far fa-user-edit"></i>
@@ -527,8 +527,8 @@
                                             </a>
                                             <span class="avatar-child avatar-badge bg-warning"></span>
                                         </div>
-                                        <h5 class="mt-3 mb-0">George Squier</h5>
-                                        <a href="#" class="d-block text-sm text-muted mb-3">@george.squier</a>
+                                        <h5 class="mt-3 mb-0">Михал Петров</h5>
+                                        <a href="#" class="d-block text-sm text-muted mb-3">+79094546756</a>
                                         <div class="actions d-flex justify-content-between px-4">
                                             <a href="#" class="action-item">
                                                 <i class="far fa-user-edit"></i>
@@ -660,12 +660,12 @@
                                     <div class="card-body text-center">
                                         <div class="avatar-parent-child">
                                             <a href="#" class="avatar avatar-lg rounded-circle">
-                                                <img alt="Image placeholder" src="../../assets/img/theme/light/team-1-800x800.jpg">
+                                                <img alt="Image placeholder" src="../../assets/img/theme/light/model-m-1.png">
                                             </a>
                                             <span class="avatar-child avatar-badge bg-info"></span>
                                         </div>
-                                        <h5 class="mt-3 mb-0">Betty Mavis</h5>
-                                        <a href="#" class="d-block text-sm text-muted mb-3">@betty.mavis</a>
+                                        <h5 class="mt-3 mb-0">Дмитрий Иванов</h5>
+                                        <a href="#" class="d-block text-sm text-muted mb-3">+79564574466</a>
                                         <div class="actions d-flex justify-content-between px-4">
                                             <a href="#" class="action-item">
                                                 <i class="far fa-user-edit"></i>
@@ -827,12 +827,12 @@
                                     <div class="card-body text-center">
                                         <div class="avatar-parent-child">
                                             <a href="#" class="avatar avatar-lg rounded-circle">
-                                                <img alt="Image placeholder" src="../../assets/img/theme/light/team-2-800x800.jpg">
+                                                <img alt="Image placeholder" src="../../assets/img/theme/light/thumb-1.jpg">
                                             </a>
                                             <span class="avatar-child avatar-badge bg-success"></span>
                                         </div>
-                                        <h5 class="mt-3 mb-0">Monroe Parker</h5>
-                                        <a href="#" class="d-block text-sm text-muted mb-3">@monroe.parker</a>
+                                        <h5 class="mt-3 mb-0">Ирина Белова</h5>
+                                        <a href="#" class="d-block text-sm text-muted mb-3">+79894545756</a>
                                         <div class="actions d-flex justify-content-between px-4">
                                             <a href="#" class="action-item">
                                                 <i class="far fa-user-edit"></i>
@@ -994,12 +994,12 @@
                                     <div class="card-body text-center">
                                         <div class="avatar-parent-child">
                                             <a href="#" class="avatar avatar-lg rounded-circle">
-                                                <img alt="Image placeholder" src="../../assets/img/theme/light/team-3-800x800.jpg">
+                                                <img alt="Image placeholder" src="../../assets/img/theme/light/team-8-800x800.jpg">
                                             </a>
                                             <span class="avatar-child avatar-badge bg-warning"></span>
                                         </div>
-                                        <h5 class="mt-3 mb-0">George Squier</h5>
-                                        <a href="#" class="d-block text-sm text-muted mb-3">@george.squier</a>
+                                        <h5 class="mt-3 mb-0">Андрей Ляпинн</h5>
+                                        <a href="#" class="d-block text-sm text-muted mb-3">+79056785647</a>
                                         <div class="actions d-flex justify-content-between px-4">
                                             <a href="#" class="action-item">
                                                 <i class="far fa-user-edit"></i>
