--- a/pages/account/worker.html
+++ b/pages/account/worker.html
@@ -175,10 +175,10 @@
                   </button>
                                     <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow" aria-labelledby="btn-group-settings">
 
-                                        <a class="dropdown-item" href="account-profile-public.html">По рейтингу</a>
+                                        <a class="dropdown-item" href="#">По рейтингу</a>
 
-                                        <a class="dropdown-item" href="account-profile.html">По выполненным заданиям</a>
-                                        <a class="dropdown-item" href="account-settings.html">По положительным отзывам</a>
+                                        <a class="dropdown-item" href="#">По выполненным заданиям</a>
+                                        <a class="dropdown-item" href="#">По положительным отзывам</a>
 
 
                                     </div>
