--- a/pages/account/account-settings.html
+++ b/pages/account/account-settings.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Purpose is a unique and beautiful collection of UI elements that are all flexible and modular. A complete and customizable solution to building the website of your dreams.">
+    <meta name="description" content="Сервис по нахождению исполнителей для оказания коммерческих услуг">
     <meta name="author" content="WeCanDo">
     <title>Сервис по нахождению исполнителей для оказания коммерческих услуг</title>
     <!-- Favicon -->
