--- a/pages/support/error-404.html
+++ b/pages/support/error-404.html
@@ -16,6 +16,8 @@
 </head>
 
 <body>
+
+
     <header class="header header-transparent" id="header-main">
         <!-- Topbar -->
         <div id="navbar-top-main" class="navbar-top  navbar-dark bg-dark border-bottom">
@@ -32,7 +34,7 @@
                             </li>
                             <li class="nav-item">
                                 <a href="#" class="nav-link" data-action="omnisearch-open" data-target="#omnisearch"><i
-                      class="far fa-search"></i></a>
+                     class="far fa-search"></i></a>
                             </li>
 
                             <li class="nav-item dropdown">
@@ -71,8 +73,8 @@
                 </a>
                 <!-- Navbar collapse trigger -->
                 <button class="navbar-toggler pr-0" type="button" data-toggle="collapse" data-target="#navbar-main-collapse" aria-controls="navbar-main-collapse" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+           <span class="navbar-toggler-icon"></span>
+         </button>
                 <!-- Navbar nav -->
                 <div class="collapse navbar-collapse" id="navbar-main-collapse">
                     <ul class="navbar-nav align-items-lg-center">
@@ -94,7 +96,7 @@
                     </ul>
                     <ul class="navbar-nav align-items-lg-center ml-lg-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="index.html">Помощь</a>
+                            <a class="nav-link" href="/pages/support/error-404.html">Помощь</a>
                         </li>
                         <li class="nav-item active">
                             <a class="nav-link" href="pages/authentication/basic-login.html">Войти</a>
@@ -115,56 +117,53 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="far fa-search"></i></span>
                         </div>
-                        <input type="text" class="form-control" placeholder="Type and hit enter ...">
+                        <input type="text" class="form-control" placeholder="Напиши слово и нажми enter ...">
                     </div>
                 </div>
             </form>
             <div class="omnisearch-suggestions">
-                <h6 class="heading">Search Suggestions</h6>
+                <h6 class="heading">Поиск исполнителя</h6>
                 <div class="row">
                     <div class="col-sm-6">
                         <ul class="list-unstyled mb-0">
                             <li>
                                 <a class="list-link" href="#">
                                     <i class="far fa-search"></i>
-                                    <span>macbook pro</span> in Laptops
+                                    <span>Фотограф</span> в фото услугах
                                 </a>
                             </li>
                             <li>
                                 <a class="list-link" href="#">
                                     <i class="far fa-search"></i>
-                                    <span>iphone 8</span> in Smartphones
+                                    <span>Авто слесарь</span> в ремонте транспорта
                                 </a>
                             </li>
                             <li>
                                 <a class="list-link" href="#">
                                     <i class="far fa-search"></i>
-                                    <span>macbook pro</span> in Laptops
+                                    <span>Электрик</span> в бытовом ремонте
                                 </a>
                             </li>
-                            <li>
-                                <a class="list-link" href="#">
-                                    <i class="far fa-search"></i>
-                                    <span>beats pro solo 3</span> in Headphones
-                                </a>
-                            </li>
-                            <li>
-                                <a class="list-link" href="#">
-                                    <i class="far fa-search"></i>
-                                    <span>smasung galaxy 10</span> in Phones
-                                </a>
-                            </li>
+
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+
+
+
+
+
+
+
     <section class="slice slice-lg vh-100 bg-gradient-primary overflow-hidden" data-offset-top="#header-main">
         <div class="bg-absolute-cover vh-100 overflow-hidden">
-            <figure class="w-100">
+            <!-- <figure class="w-100">
                 <img alt="Image placeholder" src="../../assets/img/svg/backgrounds/bg-4.svg" class="svg-inject">
-            </figure>
+            </figure> -->
         </div>
         <div class="container h-100 d-flex align-items-center position-relative zindex-100">
             <div class="col">
