--- a/pages/support/topic.html
+++ b/pages/support/topic.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Сервис по нахождению исполнителей для оказания коммерческих услуг">
-   <meta name="author" content="WeCanDo">
-  <title>Сервис по нахождению исполнителей для оказания коммерческих услуг</title>
+    <meta name="author" content="WeCanDo">
+    <title>Сервис по нахождению исполнителей для оказания коммерческих услуг</title>
     <!-- Favicon -->
     <link rel="icon" href="../../assets/img/brand/favicon.png" type="image/png">
     <!-- Font Awesome 5 -->
@@ -43,7 +43,7 @@
                     <div class="ml-auto">
                         <ul class="nav">
                             <li class="nav-item">
-                                <a class="nav-link" href="../../pages/utility/support.html">Support</a>
+                                <a class="nav-link" href="/pages/support/faq.html">Support</a>
                             </li>
                             <li class="nav-item">
                                 <a href="#" class="nav-link" data-action="omnisearch-open" data-target="#omnisearch"><i class="far fa-search"></i></a>
@@ -788,7 +788,8 @@
                                 <!-- T           opic body -->
                                 <article class="mt-5">
                                     <p>L orem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                        consequat.</p>
+                                        consequat.
+                                    </p>
                                     <p>S ed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
                                         Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit</p>
                                     <h5>Fi rst thing you need to do</h5>
