--- a/pages/account/account-profile-public.html
+++ b/pages/account/account-profile-public.html
@@ -96,7 +96,7 @@
                     </ul>
                     <ul class="navbar-nav align-items-lg-center ml-lg-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="index.html">Помощь</a>
+                            <a class="nav-link" href="/pages/support/faq.html">Помощь</a>
                         </li>
                         <li class="nav-item active">
                             <a class="nav-link" href="pages/authentication/basic-login.html">Войти</a>
