--- a/pages/authentication/basic-register.html
+++ b/pages/authentication/basic-register.html
@@ -53,7 +53,7 @@
                     <ul class="navbar-nav align-items-lg-center ml-lg-auto">
 
                         <li class="nav-item d-lg-none d-xl-block">
-                            <a class="nav-link" href="../../docs/changelog.html" target="_blank">Помощь</a>
+                            <a class="nav-link" href="/pages/support/faq.html" target="_blank">Помощь</a>
                         </li>
                         <li class="nav-item mr-0">
                             <a href="#" target="_blank" class="nav-link d-lg-none">Войти</a>
