--- a/pages/support/faq.html
+++ b/pages/support/faq.html
@@ -94,7 +94,7 @@
                     </ul>
                     <ul class="navbar-nav align-items-lg-center ml-lg-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="index.html">Помощь</a>
+                            <a class="nav-link" href="faq.html">Помощь</a>
                         </li>
                         <li class="nav-item active">
                             <a class="nav-link" href="pages/authentication/basic-login.html">Войти</a>
