--- a/pages/cart/cart-maker.html
+++ b/pages/cart/cart-maker.html
@@ -85,7 +85,7 @@
                         </li>
                         <!-- Pages menu -->
                         <li class="nav-item active">
-                            <a class="nav-link" href="../../index.html">Создать задание</a>
+                            <a class="nav-link" href="cart-maker.html">Создать задание</a>
                         </li>
                         <!-- Sections menu -->
                         <li class="nav-item active">
