--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         </li>
                         <!-- Pages menu -->
                         <li class="nav-item active">
-                            <a class="nav-link" href="index.html">Создать задание</a>
+                            <a class="nav-link" href="/pages/cart/cart-maker.html">Создать задание</a>
                         </li>
                         <!-- Sections menu -->
                         <li class="nav-item active">
