--- a/pages/authentication/basic-register.html
+++ b/pages/authentication/basic-register.html
@@ -36,7 +36,7 @@
                             <a class="nav-link" href="../../index.html">Главная</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link" href="../../index.html">Создать задание</a>
+                            <a class="nav-link" href="../cart/cart-maker.html">Создать задание</a>
                         </li>
                         <li class="nav-item ">
                             <a class="nav-link" href="../../index.html">Все задания</a>
