--- a/pages/support/error-404.html
+++ b/pages/support/error-404.html
@@ -80,11 +80,11 @@
                     <ul class="navbar-nav align-items-lg-center">
                         <!-- Home - Overview  -->
                         <li class="nav-item active">
-                            <a class="nav-link" href="index.html">Главная</a>
+                            <a class="nav-link" href="../../index.html">Главная</a>
                         </li>
                         <!-- Pages menu -->
                         <li class="nav-item active">
-                            <a class="nav-link" href="index.html">Создать задание</a>
+                            <a class="nav-link" href="../cart/cart-maker.html">Создать задание</a>
                         </li>
                         <!-- Sections menu -->
                         <li class="nav-item active">
