--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                                         <i class="far fa-cog"></i>Настройки
                                     </a>
                                     <div class="dropdown-divider" role="presentation"></div>
-                                    <a class="dropdown-item" href="#">
+                                    <a class="dropdown-item" href="./pages/cart/cart-maker.html">
                                         <i class="far fa-sign-out-alt"></i>Выход
                                     </a>
                                 </div>
