--- a/pages/account/account-profile-public.html
+++ b/pages/account/account-profile-public.html
@@ -68,7 +68,7 @@
         <nav class="navbar navbar-main navbar-expand-lg navbar-transparent navbar-dark bg-dark" id="navbar-main">
             <div class="container px-lg-0">
                 <!-- Logo -->
-                <a class="navbar-brand mr-lg-5" href="index.html">
+                <a class="navbar-brand mr-lg-5" href="../../index.html">
                     <img alt="Image placeholder" src="../../assets/img/brand/favicon.png" id="navbar-logo" style="height: 50px;">
                 </a>
                 <!-- Navbar collapse trigger -->
