--- a/pages/tasks/tasks.html
+++ b/pages/tasks/tasks.html
@@ -151,7 +151,7 @@
     </div>
     <div class="main-content">
         <!-- Header (account) -->
-        <section class="header-account-page bg-primary d-flex align-items-end" data-offset-top="#header-main">
+        <section class="header-account bg-primary d-flex align-items-end" data-offset-top="#header-main">
             <!-- Header container -->
             <div class="container pt-4 pt-lg-0">
                 <div class="row">
